# robin-bird

./: CMakeLists.txt  LICENSE  LICENSE.adoc  README.adoc  README.md
debian/: changelog  control  rules
docs/: Gemfile  Rakefile  generate.sh  index.html  robinbird.adoc
docs/chapters/: 0-abstract.adoc  1-introduction.adoc  2-installation.adoc  3-robinbird-overview.adoc
docs/html/: robinbird.html
docs/page/: canvas.html  canvas_backup.html  robin.rb
docs/page/public/css/: style.css
docs/page/public/dataset/: test-dataset.rb  train-dataset.rb
docs/page/public/models/: 2019_07_17_14_37_26_100_hwd-model.rb
docs/page/public/patches/: add-robin-bird-recipe.patch
docs/page/views/: documentation.haml  download.haml  html_backup  index.haml  layout.haml  photo_upload.php  quickstart.haml  training.haml
rb-deb-package/: robin-0.1.1-Linux.deb
robin/: CMakeLists.txt
robin/cmake/: robin.pc.cmake
robin/lib/: CMakeLists.txt  hwd.cpp  hwd.h  math.cpp  math.h  robin-image.cpp  robin-image.h  robin-nn.cpp  robin-nn.h
robin/models/: 2019_07_17_14_41_06_hwd-model.rb  2019_07_22_14_31_12_hwd-model.rb  2019_07_22_14_35_55_hwd-model.rb  hwd-digits-model.rb  hwd-digits-test.rb  hwd-digits-train.rb
robin/robin-core/: calc-matrix.cpp  calc-matrix.h
robin/robin-nn/: robin-nn.cpp  robin-nn.h
robin/samples/: CMakeLists.txt
robin/samples/1-sample/: CMakeLists.txt
robin/samples/1-sample/sample-cl/: CMakeLists.txt  sample.cpp
robin/samples/2-hwd/: CMakeLists.txt  README.md
robin/samples/2-hwd/hwd-cl/: CMakeLists.txt  handwritten-digit.cpp
robin/samples/2-hwd/hwd-input-cl/: CMakeLists.txt
robin/samples/example/: example.cpp
robin/samples/handWrittenDigit/: CMakeLists.txt
robin/samples/handWrittenDigit/handWrittenDigitCL/: CMakeLists.txt  handWrittenDigitTraining.cpp
robin/samples/handWrittenDigit/handWrittenDigitInputCL/: CMakeLists.txt  handWrittenDigitInputCL.cpp
robin/samples/handWrittenDigit/handWrittenDigitInputUI/: CMakeLists.txt  README.md  handWrittenDigitInputUI.cpp  handWrittenDigitInputUI.h  main.cpp  main_window.cpp  main_window.h  results.cpp  results.h
robin/samples/sample/: CMakeLists.txt  README.md
robin/samples/sample/sampleCL/: CMakeLists.txt  sampleCL.cpp
robin/scripts/: CMakeLists.txt  convert.py  converted.txt  opencv4.pc
robin/tools/: CMakeLists.txt
